// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Tabs statefull - absolute 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <div
    class="css-1umeq4r"
  >
    <div
      class="css-1kukg5m"
      role="tablist"
    >
      <div
        class="css-19n0dxh"
        role="tab"
        selected=""
        type="button"
      >
        Tab title #1
      </div>
      <div
        class="css-l23j5o"
        role="tab"
        type="button"
      >
        Tab title #2
      </div>
      <div
        class="css-l23j5o"
        role="tab"
        type="button"
      >
        Tab with scroll
      </div>
      <div
        class="css-l23j5o"
        role="tab"
        type="button"
      >
        Tab title #4
      </div>
      <div
        class="css-l23j5o"
        role="tab"
        type="button"
      >
        Tab title #5
      </div>
      <div
        class="css-l23j5o"
        role="tab"
        type="button"
      >
        Tab title #6
      </div>
    </div>
    <div
      class="css-2bpp8s"
    >
      <div
        id="test1"
      >
        CONTENT 1
      </div>
      <div
        id="test2"
        style="background:hotpink;min-height:100%;display:none"
      >
        CONTENT 2
      </div>
      <div
        class="css-1hyfx7x"
      >
        <div>
          CONTENT 6
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs statefull - no initial 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <div
    class="css-12o81cp"
  >
    <div
      class="css-1kukg5m"
      role="tablist"
    >
      <div
        class="css-19n0dxh"
        role="tab"
        selected=""
        type="button"
      >
        Tab title #1
      </div>
      <div
        class="css-l23j5o"
        role="tab"
        type="button"
      >
        Tab title #2
      </div>
      <div
        class="css-l23j5o"
        role="tab"
        type="button"
      >
        Tab with scroll
      </div>
      <div
        class="css-l23j5o"
        role="tab"
        type="button"
      >
        Tab title #4
      </div>
      <div
        class="css-l23j5o"
        role="tab"
        type="button"
      >
        Tab title #5
      </div>
      <div
        class="css-l23j5o"
        role="tab"
        type="button"
      >
        Tab title #6
      </div>
    </div>
    <div
      class="css-13o7eu2"
    >
      <div
        id="test1"
      >
        CONTENT 1
      </div>
      <div
        id="test2"
        style="background:hotpink;min-height:100%;display:none"
      >
        CONTENT 2
      </div>
      <div
        class="css-1hyfx7x"
      >
        <div>
          CONTENT 6
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs statefull - with initial 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <div
    class="css-12o81cp"
  >
    <div
      class="css-1kukg5m"
      role="tablist"
    >
      <div
        class="css-l23j5o"
        role="tab"
        type="button"
      >
        Tab title #1
      </div>
      <div
        class="css-19n0dxh"
        role="tab"
        selected=""
        type="button"
      >
        Tab title #2
      </div>
      <div
        class="css-l23j5o"
        role="tab"
        type="button"
      >
        Tab with scroll
      </div>
      <div
        class="css-l23j5o"
        role="tab"
        type="button"
      >
        Tab title #4
      </div>
      <div
        class="css-l23j5o"
        role="tab"
        type="button"
      >
        Tab title #5
      </div>
      <div
        class="css-l23j5o"
        role="tab"
        type="button"
      >
        Tab title #6
      </div>
    </div>
    <div
      class="css-13o7eu2"
    >
      <div
        id="test2"
        style="background:hotpink;min-height:100%;display:block"
      >
        CONTENT 2
      </div>
      <div
        class="css-1hyfx7x"
      >
        <div>
          CONTENT 6
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateless - default 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <div
    class="css-12o81cp"
  >
    <div
      class="css-1kukg5m"
      role="tablist"
    >
      <div
        class="css-l23j5o"
        role="tab"
        type="button"
      >
        Tab title #1
      </div>
      <div
        class="css-l23j5o"
        role="tab"
        type="button"
      >
        Tab title #2
      </div>
      <div
        class="css-l23j5o"
        role="tab"
        type="button"
      >
        Tab with scroll
      </div>
      <div
        class="css-l23j5o"
        role="tab"
        type="button"
      >
        Tab title #4
      </div>
      <div
        class="css-l23j5o"
        role="tab"
        type="button"
      >
        Tab title #5
      </div>
      <div
        class="css-l23j5o"
        role="tab"
        type="button"
      >
        Tab title #6
      </div>
    </div>
    <div
      class="css-13o7eu2"
    >
      <div
        id="test2"
        style="background:hotpink;min-height:100%;display:none"
      >
        CONTENT 2
      </div>
      <div
        class="css-1hyfx7x"
      >
        <div>
          CONTENT 6
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Tabs stateless - empty 1`] = `
<div
  style="height:calc(100vh - 20px)"
>
  <p
    class="css-hftiue"
  >
    no panels available
  </p>
</div>
`;
